--- a/app/src/main/res/layout/fragment_mainmenu.xml
+++ b/app/src/main/res/layout/fragment_mainmenu.xml
@@ -5,41 +5,84 @@
     android:id="@+id/background_constraintlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainMenuFragment">
+    tools:context=".MainMenuFragment"
+    android:background="@color/screenBackground">
 
     <com.github.florent37.diagonallayout.DiagonalLayout
+        android:id="@+id/upper_diagonallayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:elevation="3dp"
         app:diagonal_angle="15"
         app:diagonal_direction="left"
         app:diagonal_position="bottom"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/guideline2"
-        android:elevation="3dp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/topSlide_imageview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/downSlideColor"
             android:scaleType="centerCrop" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/mainfont"
+                android:text="@string/classic_mode"
+                android:textColor="@android:color/white"
+                android:textSize="45sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.4" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     </com.github.florent37.diagonallayout.DiagonalLayout>
 
     <com.github.florent37.diagonallayout.DiagonalLayout
+        android:id="@+id/down_diagonallayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:elevation="3dp"
         app:diagonal_angle="15"
         app:diagonal_direction="right"
         app:diagonal_position="top"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="@id/guideline2"
-        android:elevation="3dp">
+        app:layout_constraintTop_toTopOf="@id/guideline2">
 
         <ImageView
             android:id="@+id/bottomSlide_imageview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="matrix"/>
+            android:background="@color/test"
+            android:scaleType="matrix" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/mainfont"
+                android:text="@string/speed_duel"
+                android:textColor="@android:color/white"
+                android:textSize="45sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.6" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </com.github.florent37.diagonallayout.DiagonalLayout>
 
@@ -52,7 +95,12 @@
             android:id="@+id/slide_viewpager"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+    </RelativeLayout>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:elevation="4dp">
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabDots"
             android:layout_width="match_parent"
@@ -61,7 +109,6 @@
             app:tabBackground="@drawable/tab_selector"
             app:tabGravity="center"
             app:tabIndicatorHeight="0dp" />
-
     </RelativeLayout>
 
     <androidx.constraintlayout.widget.Guideline
