--- a/app/src/main/res/layout/fragment_twoplayer_mainapp.xml
+++ b/app/src/main/res/layout/fragment_twoplayer_mainapp.xml
@@ -72,7 +72,7 @@
                         android:layout_margin="10dp"
                         android:background="@drawable/circle_button"
                         android:rotation="180"
-                        android:src="@drawable/ic_edit" />
+                        app:srcCompat="@drawable/ic_edit" />
 
                     <ImageButton
                         android:id="@+id/addCounterOne_button"
@@ -82,7 +82,7 @@
                         android:layout_margin="10dp"
                         android:layout_toStartOf="@id/playerOneCalcul_button"
                         android:background="@drawable/circle_button"
-                        android:src="@drawable/ic_add_counter" />
+                        app:srcCompat="@drawable/ic_add_counter" />
 
                     <ScrollView
                         android:layout_width="wrap_content"
@@ -112,7 +112,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="20dp"
                         android:background="@drawable/circle_button"
-                        android:src="@drawable/ic_back"
+                        app:srcCompat="@drawable/ic_back"
                         android:text="@string/previous" />
 
                     <ImageButton
@@ -124,7 +124,7 @@
                         android:layout_toEndOf="@id/button_second"
                         android:background="@drawable/circle_button"
                         android:contentDescription="Reset"
-                        android:src="@drawable/ic_reset" />
+                        app:srcCompat="@drawable/ic_reset" />
 
                     <ImageButton
                         android:id="@+id/tosscoin_imagebutton"
@@ -134,7 +134,7 @@
                         android:layout_marginStart="20dp"
                         android:layout_toEndOf="@id/reset_imagebutton"
                         android:background="@drawable/circle_button"
-                        android:src="@drawable/ic_coinflip" />
+                        app:srcCompat="@drawable/ic_coinflip" />
 
                     <ImageButton
                         android:id="@+id/history_button"
@@ -143,7 +143,7 @@
                         android:layout_marginStart="20dp"
                         android:layout_toEndOf="@id/tosscoin_imagebutton"
                         android:background="@drawable/circle_button"
-                        android:src="@drawable/ic_history" />
+                        app:srcCompat="@drawable/ic_history" />
 
                     <ImageButton
                         android:id="@+id/timer_imagebutton"
@@ -155,7 +155,7 @@
                         android:layout_toEndOf="@id/history_button"
                         android:background="@drawable/circle_button"
                         android:contentDescription="Timer"
-                        android:src="@drawable/ic_timer_off" />
+                        app:srcCompat="@drawable/ic_timer_off" />
 
                     <Chronometer
                         android:id="@+id/chronometer_view"
@@ -206,7 +206,7 @@
                         android:layout_alignParentBottom="true"
                         android:layout_margin="10dp"
                         android:background="@drawable/circle_button"
-                        android:src="@drawable/ic_edit" />
+                        app:srcCompat="@drawable/ic_edit" />
 
                     <EditText
                         android:id="@+id/playerTwo_edittext"
@@ -231,7 +231,7 @@
                         android:layout_margin="10dp"
                         android:layout_toEndOf="@id/playerTwoCalcul_button"
                         android:background="@drawable/circle_button"
-                        android:src="@drawable/ic_add_counter" />
+                        app:srcCompat="@drawable/ic_add_counter" />
 
                     <ScrollView
                         android:layout_width="wrap_content"
