--- a/app/src/main/res/layout-land/fragment_mainmenu.xml
+++ b/app/src/main/res/layout-land/fragment_mainmenu.xml
@@ -39,8 +39,9 @@
                 android:textColor="@android:color/white"
                 android:textSize="45sp"
                 android:textStyle="bold"
+                android:paddingStart="30dp"
+                android:paddingEnd="0dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.4" />
@@ -79,9 +80,10 @@
                 android:text="@string/speed_duel"
                 android:textColor="@android:color/white"
                 android:textSize="45sp"
+                android:paddingStart="0dp"
+                android:paddingEnd="30dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.6" />
         </androidx.constraintlayout.widget.ConstraintLayout>
