--- a/app/src/main/res/layout/counter_view.xml
+++ b/app/src/main/res/layout/counter_view.xml
@@ -16,7 +16,9 @@
         android:inputType="textPersonName"
         android:text="@string/counter"
         android:cursorVisible="false"
-        android:textSize="12sp" />
+        android:textSize="12sp"
+        android:autofillHints="@string/counter"
+        android:hint="@string/counter"/>
 
     <TextView
         app:layout_constraintStart_toEndOf="@id/counterName_edittext"
@@ -40,7 +42,8 @@
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:background="@android:color/transparent"
-        android:src="@drawable/ic_add" />
+        app:srcCompat="@drawable/ic_add"
+        android:contentDescription="@string/increment_counter" />
 
     <ImageButton
         app:layout_constraintStart_toEndOf="@id/increment_imagebutton"
@@ -50,7 +53,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:background="@android:color/transparent"
-        android:src="@drawable/ic_remove" />
+        app:srcCompat="@drawable/ic_remove"
+        android:contentDescription="@string/decrement_counter" />
 
     <ImageButton
         app:layout_constraintStart_toEndOf="@id/decrement_imagebutton"
@@ -61,5 +65,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:background="@drawable/circle_button"
         android:layout_marginStart="20dp"
-        android:src="@drawable/ic_close" />
+        app:srcCompat="@drawable/ic_close"
+        android:contentDescription="@string/delete_counter" />
 </androidx.constraintlayout.widget.ConstraintLayout>
